--- a/server/todo.txt
+++ b/server/todo.txt
@@ -10,6 +10,9 @@ No longer get this diagnostic but still not getting images from nginx.
 
 runner_server:
 ==============
+o) will need pull(image_name) as well as new_kata()
+   to support [cyber-dojo start-point pull NAME]
+
 o) add cpu/memory/swap limits
    See comments at https://github.com/cyber-dojo/commander/blob/master/docker-compose.yml
    See https://github.com/docker/docker/pull/9437
