--- a/server/todo.txt
+++ b/server/todo.txt
@@ -130,3 +130,23 @@ o) Could the new_kata() container creation be done with a command that
    expires at its deadline. sleep!
    This would indeed prevent subsequent [docker exec]'s
    But the container would still exist in an exited state.
+   I can solve that by doing a [cyber-dojo clean] before!
+   This creates a very small delay but not on [test] (on kata creation)
+   This means the duration of a kata will need to be part of the process
+   of creating a kata. Should I offer a choice or just have one (eg 1 day)
+
+o) A duration ties in strongly with James' idea of a readonly kata.
+   A simple button to "finish"/"publish" a kata is needed.
+   Note that the duration choice might have to be re-offered (if there
+   is a choice) when you fork.
+
+o) A big implication of having a container per kata is that containers
+   are now long-lived. This means Alpine images need to have tini.
+   This needs to be tested for. Would be handy to have a list of which
+   images are Ubuntu based and which are Alpine based.
+
+o) new_kata() creates the container and the base /sandboxes dir.
+o) new_avatar(lion) creates a new user called lion in the container.
+   it creates /sandboxes/lion and gives lion ownership of it.
+   it makes /sandboxes/lion the HOME for lion.
+
