--- a/server/todo.txt
+++ b/server/todo.txt
@@ -4,6 +4,12 @@ runner_server:
 
 o) runner pulled?/pull tests. Use MockShell so they are faster and work
    if you have no internet connection.
+   server
+     KataTest 5E7 AED CC8
+     PullTest 91C A44 A73
+   client
+     PullTest A82
+
 
 o) runner-server: remove thin and foreman. Just use classic sinatra?
 
