--- a/server/todo.txt
+++ b/server/todo.txt
@@ -4,19 +4,24 @@ runner_server:
 
 o) Suppose you know the id of a kata done before runner was introduced
    as a service. You can review ok. But if you hit [test] what happens?
-   Answer, you get output of "sh: ./cyber-dojo.sh: not found" and an
-   amber traffic-light. Why?
+   Answer
+   - if there is no change (since the volume gc'd) you get output of
+     "sh: ./cyber-dojo.sh: not found" and an amber traffic-light.
+   - if there is a change you get the same. Interesting. I was expecting
+     an exception
+   Why?
    It is because the volume-mount in the [docker run] fails but the
    docker run still returns a cid. The actual command [docker exec]'d is
    './cyber-dojo.sh' because --workdir (which fails) is in the [docker run].
    So there is no cyber-dojo.sh file.
-   How to proceed? I'd like for web to recognize this situation and not
-   create a new traffic-light. Should runner detect it? Can it do that without
-   an extra call which would slow down the [test]?
-   web could simply look to see if the output is "sh: ./cyber-dojo.sh: not found"
-   Presumably that could be faked.
-   What about returning a status from [docker exec] and capturing that in the
-   Process.waitpid(pid)
+   I'd like for web to recognize this situation and not create a new traffic-light.
+   Can runner detect this without an extra call which would slow down [test]?
+   [docker exec]'s command can change from './cyber-dojo.sh' to something like
+   [ ! -d sandbox ] && echo 'no /sandbox' || sandbox/cyber-dojo.sh
+   and then simply check the output.
+   Of course, cyber-dojo.sh could fake by returning this string! Not a problem.
+   Note that Process.waitpid(pid) returns a Process::Status object which has
+   .exitstatus and also .coredump?
 
 o) Do I want the kata's 24 hours alive-time to be based on the kata or the avatar?
    If it's the kata then how does the volume-collector know the start-time of the
