added comment on reason some MicroServic/DockerRunner methods have unsused arguments

--- a/server/todo.txt
+++ b/server/todo.txt
@@ -24,6 +24,8 @@ o) Runner needs to see katas/ dir (readonly) only for kata-id validation.
 
 o) Collector sees katas/ dir (readonly) and removes volumes.
 
+o) Should new_kata() do a pull? Is it needed for fork?
+
 o) runner pulled?/pull tests. Use MockShell so they are faster and work
    if you have no internet connection.
    server
