--- a/server/todo.txt
+++ b/server/todo.txt
@@ -16,6 +16,9 @@ o) runner pulled?/pull tests. Use MockShell so they are faster and work
    client
      PullTest A82
 
+o) external_sheller: only ever one command in...
+   cd_exec(path, *commands)
+
 o) runner-server: remove thin and foreman. Just use classic sinatra?
 
 o) when it goes live the C#-Moq and C#-NUnit cyber-dojo.sh can be simplified to
