--- a/server/todo.txt
+++ b/server/todo.txt
@@ -10,14 +10,14 @@ o) Runner.run needs to check if there is a volume for the avatar.
      delta = FileDeltaMaker.make_delta(incoming, outgoing)
      files = received_files
      stdout,stderr,status = @avatar.test(delta, files)
-     if status indicates no-volume
+     if status == 'no_volume'
         args = []
         args << kata.image_name
         args << kata.id
         args << @avatar.name
         args << files
         runner.new_avatar(*args)
-        delta = { unchanged:[], changed:[], deleted:[], new:[] }
+        delta = { changed:[], deleted:[], new:[] }
         stdout,stderr,status = @avatar.test(delta, files = {})
      end
 
