--- a/server/todo.txt
+++ b/server/todo.txt
@@ -2,16 +2,15 @@
 runner_server:
 ==============
 
-o) Runner needs to see katas/ dir (readonly) only for kata-id validation.
-
-o) Collector sees katas/ dir (readonly) and removes volumes.
+o) validate microservice parameters?
+   - kata_id = 10 hex chars
+     runner could see see katas/ dir (readonly) for full validation.
+   - avatar_name = one of the known 64 animals
+   - max_seconds = integer (with max of 15 seconds?)
+   - deleted_filenames (what chars are illegal in linux filename?)
+   - changed_files
 
 o) Should new_kata() do a pull? Is it needed for fork?
-
-o) runner pulled?/pull tests. Use MockShell so they are faster and work
-   if you have no internet connection.
-   client
-     PullTest A82
 
 o) external_sheller: only ever one command in...
    cd_exec(path, *commands)
@@ -59,13 +58,6 @@ o) can you copying a changed file into the container via a named-pipe?
    tar -zcf /tmp/file | docker exec ... sh -c 'tar -zxf - -C /sandbox'
    IO.write('/tmp/file', content)
    `rm /tmp/file`
-
-o) validate microservice parameters?
-   - kata_id = 10 hex chars
-   - avatar_name = one of the known 64 animals
-   - max_seconds = integer (with max of 15 seconds?)
-   - deleted_filenames (what chars are illegal in linux filename?)
-   - changed_files
 
 o) Should there be a volume per kata rather than per animal?
    Fits with the value-system of cyber-dojo.
